// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LikeC4ModelBuilder > builds model with description and technology 1`] = `
{
  "_stage": "computed",
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "client": {
      "id": "client",
      "kind": "user",
      "links": null,
      "shape": "person",
      "style": {
        "opacity": 40,
      },
      "tags": [],
      "title": "client",
    },
    "system": {
      "id": "system",
      "kind": "component",
      "links": null,
      "style": {},
      "tags": [],
      "title": "system",
    },
    "system.backend": {
      "color": "secondary",
      "id": "system.backend",
      "kind": "component",
      "links": null,
      "style": {
        "border": "dashed",
      },
      "tags": [],
      "technology": "NodeJS",
      "title": "Backend",
    },
    "system.frontend": {
      "color": "muted",
      "description": {
        "txt": "Frontend description",
      },
      "id": "system.frontend",
      "kind": "component",
      "links": null,
      "shape": "browser",
      "style": {},
      "tags": [],
      "title": "frontend",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "projectId": "default",
  "relations": {
    "90t726": {
      "id": "90t726",
      "source": {
        "model": "system.frontend",
      },
      "target": {
        "model": "system.backend",
      },
      "title": "requests",
    },
    "vcxqbt": {
      "id": "vcxqbt",
      "source": {
        "model": "client",
      },
      "target": {
        "model": "system.frontend",
      },
      "title": "",
    },
  },
  "specification": {
    "customColors": {},
    "deployments": {},
    "elements": {
      "component": {
        "style": {},
      },
      "user": {
        "style": {
          "opacity": 40,
          "shape": "person",
        },
      },
    },
    "relationships": {},
    "tags": {},
  },
  "views": {
    "index": {
      "_stage": "computed",
      "_type": "element",
      "autoLayout": {
        "direction": "TB",
      },
      "description": null,
      "edges": [
        {
          "id": "client:system",
          "label": null,
          "parent": null,
          "relations": [
            "vcxqbt",
          ],
          "source": "client",
          "target": "system",
        },
      ],
      "hash": "23b511a0eedab1b90ff7fc0685c2d10fedb76a14",
      "id": "index",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "client",
          "inEdges": [],
          "kind": "user",
          "level": 0,
          "links": null,
          "modelRef": "client",
          "outEdges": [
            "client:system",
          ],
          "parent": null,
          "shape": "person",
          "style": {
            "opacity": 40,
          },
          "tags": [],
          "technology": null,
          "title": "client",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system",
          "inEdges": [
            "client:system",
          ],
          "kind": "component",
          "level": 0,
          "links": null,
          "modelRef": "system",
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": [],
          "technology": null,
          "title": "system",
        },
      ],
      "tags": null,
      "title": "Landscape view",
    },
  },
}
`;

exports[`LikeC4ModelBuilder > builds model with extend 1`] = `
{
  "_stage": "computed",
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "client": {
      "id": "client",
      "kind": "user",
      "links": null,
      "style": {},
      "tags": [],
      "title": "client",
    },
    "system": {
      "id": "system",
      "kind": "component",
      "links": null,
      "style": {},
      "tags": [],
      "title": "system",
    },
    "system.backend": {
      "id": "system.backend",
      "kind": "component",
      "links": null,
      "style": {},
      "tags": [],
      "title": "backend",
    },
    "system.backend.api": {
      "id": "system.backend.api",
      "kind": "component",
      "links": null,
      "style": {},
      "tags": [],
      "title": "api",
    },
    "system.frontend": {
      "id": "system.frontend",
      "kind": "component",
      "links": null,
      "style": {},
      "tags": [],
      "title": "frontend",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "projectId": "default",
  "relations": {
    "14imtre": {
      "id": "14imtre",
      "source": {
        "model": "client",
      },
      "target": {
        "model": "system.frontend",
      },
      "title": "opens",
    },
    "fubnyh": {
      "id": "fubnyh",
      "source": {
        "model": "system.frontend",
      },
      "target": {
        "model": "system.backend.api",
      },
      "title": "requests",
    },
  },
  "specification": {
    "customColors": {},
    "deployments": {},
    "elements": {
      "component": {
        "style": {},
      },
      "user": {
        "style": {},
      },
    },
    "relationships": {},
    "tags": {
      "deprecated": {
        "color": "tomato",
      },
    },
  },
  "views": {
    "frontend": {
      "_stage": "computed",
      "_type": "element",
      "autoLayout": {
        "direction": "TB",
      },
      "description": null,
      "edges": [
        {
          "id": "client:system.frontend",
          "label": "opens",
          "parent": null,
          "relations": [
            "14imtre",
          ],
          "source": "client",
          "target": "system.frontend",
        },
        {
          "id": "system.frontend:system.backend",
          "label": "requests",
          "parent": null,
          "relations": [
            "fubnyh",
          ],
          "source": "system.frontend",
          "target": "system.backend",
        },
      ],
      "hash": "320f6738d894c82abc703e48378e7c5ca7d5de98",
      "id": "frontend",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "client",
          "inEdges": [],
          "kind": "user",
          "level": 0,
          "links": null,
          "modelRef": "client",
          "outEdges": [
            "client:system.frontend",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": [],
          "technology": null,
          "title": "client",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system.frontend",
          "inEdges": [
            "client:system.frontend",
          ],
          "kind": "component",
          "level": 0,
          "links": null,
          "modelRef": "system.frontend",
          "outEdges": [
            "system.frontend:system.backend",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": [],
          "technology": null,
          "title": "frontend",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system.backend",
          "inEdges": [
            "system.frontend:system.backend",
          ],
          "kind": "component",
          "level": 0,
          "links": null,
          "modelRef": "system.backend",
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": [],
          "technology": null,
          "title": "backend",
        },
      ],
      "relativePath": "2.c4",
      "tags": null,
      "title": "frontend",
      "viewOf": "system.frontend",
    },
    "index": {
      "_stage": "computed",
      "_type": "element",
      "autoLayout": {
        "direction": "TB",
      },
      "description": null,
      "edges": [
        {
          "id": "client:system",
          "label": "opens",
          "parent": null,
          "relations": [
            "14imtre",
          ],
          "source": "client",
          "target": "system",
        },
      ],
      "hash": "ad0856180cdcebf3b94f1dbc6bcb6c10f535f93a",
      "id": "index",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "client",
          "inEdges": [],
          "kind": "user",
          "level": 0,
          "links": null,
          "modelRef": "client",
          "outEdges": [
            "client:system",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": [],
          "technology": null,
          "title": "client",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system",
          "inEdges": [
            "client:system",
          ],
          "kind": "component",
          "level": 0,
          "links": null,
          "modelRef": "system",
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": [],
          "technology": null,
          "title": "system",
        },
      ],
      "relativePath": "2.c4",
      "tags": null,
      "title": "Index",
    },
    "v1": {
      "_stage": "computed",
      "_type": "element",
      "autoLayout": {
        "direction": "LR",
      },
      "description": null,
      "edges": [
        {
          "id": "system.frontend:system.backend.api",
          "label": "requests",
          "parent": null,
          "relations": [
            "fubnyh",
          ],
          "source": "system.frontend",
          "target": "system.backend.api",
        },
      ],
      "hash": "3357c336f60b647545d01a58c7e29f22cd7efcc5",
      "id": "v1",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system.frontend",
          "inEdges": [],
          "kind": "component",
          "level": 0,
          "links": null,
          "modelRef": "system.frontend",
          "navigateTo": "frontend",
          "outEdges": [
            "system.frontend:system.backend.api",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": [],
          "technology": null,
          "title": "frontend",
        },
        {
          "children": [
            "system.backend.api",
          ],
          "color": "primary",
          "depth": 1,
          "description": null,
          "id": "system.backend",
          "inEdges": [
            "system.frontend:system.backend.api",
          ],
          "kind": "component",
          "level": 0,
          "links": null,
          "modelRef": "system.backend",
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": [],
          "technology": null,
          "title": "backend",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "system.backend.api",
          "inEdges": [
            "system.frontend:system.backend.api",
          ],
          "kind": "component",
          "level": 1,
          "links": null,
          "modelRef": "system.backend.api",
          "outEdges": [],
          "parent": "system.backend",
          "shape": "rectangle",
          "style": {},
          "tags": [],
          "technology": null,
          "title": "api",
        },
      ],
      "relativePath": "2.c4",
      "tags": null,
      "title": "api",
      "viewOf": "system.backend.api",
    },
  },
}
`;

exports[`LikeC4ModelBuilder > builds model with relationship spec and tag 1`] = `
{
  "_stage": "computed",
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "user1": {
      "id": "user1",
      "kind": "person",
      "links": null,
      "style": {},
      "tags": [],
      "title": "user1",
    },
    "user2": {
      "id": "user2",
      "kind": "person",
      "links": null,
      "style": {},
      "tags": [],
      "title": "user2",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "projectId": "default",
  "relations": {
    "1qlbaph": {
      "id": "1qlbaph",
      "kind": "async",
      "source": {
        "model": "user1",
      },
      "tags": [
        "next",
      ],
      "target": {
        "model": "user2",
      },
      "title": "",
    },
  },
  "specification": {
    "customColors": {},
    "deployments": {},
    "elements": {
      "person": {
        "style": {},
      },
    },
    "relationships": {
      "async": {
        "style": {},
      },
    },
    "tags": {
      "next": {
        "color": "tomato",
      },
    },
  },
  "views": {
    "index": {
      "_stage": "computed",
      "_type": "element",
      "autoLayout": {
        "direction": "TB",
      },
      "description": null,
      "edges": [
        {
          "id": "user1:user2",
          "kind": "async",
          "label": null,
          "parent": null,
          "relations": [
            "1qlbaph",
          ],
          "source": "user1",
          "tags": [
            "next",
          ],
          "target": "user2",
        },
      ],
      "hash": "51992c70273dcaefd599bc0cf0c835fa0851e464",
      "id": "index",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "user1",
          "inEdges": [],
          "kind": "person",
          "level": 0,
          "links": null,
          "modelRef": "user1",
          "outEdges": [
            "user1:user2",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": [],
          "technology": null,
          "title": "user1",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "user2",
          "inEdges": [
            "user1:user2",
          ],
          "kind": "person",
          "level": 0,
          "links": null,
          "modelRef": "user2",
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": [],
          "technology": null,
          "title": "user2",
        },
      ],
      "tags": null,
      "title": "Landscape view",
    },
  },
}
`;

exports[`LikeC4ModelBuilder > builds model with relationship spec with technology 1`] = `
{
  "_stage": "computed",
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "user1": {
      "id": "user1",
      "kind": "person",
      "links": null,
      "style": {},
      "tags": [],
      "title": "user1",
    },
    "user2": {
      "id": "user2",
      "kind": "person",
      "links": null,
      "style": {},
      "tags": [],
      "title": "user2",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "projectId": "default",
  "relations": {
    "1qlbaph": {
      "id": "1qlbaph",
      "kind": "async",
      "source": {
        "model": "user1",
      },
      "target": {
        "model": "user2",
      },
      "technology": "Async",
      "title": "",
    },
  },
  "specification": {
    "customColors": {},
    "deployments": {},
    "elements": {
      "person": {
        "style": {},
      },
    },
    "relationships": {
      "async": {
        "style": {},
        "technology": "Async",
      },
    },
    "tags": {},
  },
  "views": {
    "index": {
      "_stage": "computed",
      "_type": "element",
      "autoLayout": {
        "direction": "TB",
      },
      "description": null,
      "edges": [
        {
          "id": "user1:user2",
          "kind": "async",
          "label": "[Async]",
          "parent": null,
          "relations": [
            "1qlbaph",
          ],
          "source": "user1",
          "target": "user2",
          "technology": "Async",
        },
      ],
      "hash": "638ee1898bb8217e3e9a6a65d4e64b80adccf227",
      "id": "index",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "user1",
          "inEdges": [],
          "kind": "person",
          "level": 0,
          "links": null,
          "modelRef": "user1",
          "outEdges": [
            "user1:user2",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": [],
          "technology": null,
          "title": "user1",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "user2",
          "inEdges": [
            "user1:user2",
          ],
          "kind": "person",
          "level": 0,
          "links": null,
          "modelRef": "user2",
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": [],
          "technology": null,
          "title": "user2",
        },
      ],
      "tags": null,
      "title": "Landscape view",
    },
  },
}
`;

exports[`LikeC4ModelBuilder > builds model with styled relationship 1`] = `
{
  "_stage": "computed",
  "deployments": {
    "elements": {},
    "relations": {},
  },
  "elements": {
    "user1": {
      "id": "user1",
      "kind": "person",
      "links": null,
      "style": {},
      "tags": [],
      "title": "user1",
    },
    "user2": {
      "id": "user2",
      "kind": "person",
      "links": null,
      "style": {},
      "tags": [],
      "title": "user2",
    },
  },
  "globals": {
    "dynamicPredicates": {},
    "predicates": {},
    "styles": {},
  },
  "imports": {},
  "projectId": "default",
  "relations": {
    "1qlbaph": {
      "color": "red",
      "head": "diamond",
      "id": "1qlbaph",
      "line": "dotted",
      "source": {
        "model": "user1",
      },
      "tail": "none",
      "target": {
        "model": "user2",
      },
      "title": "",
    },
  },
  "specification": {
    "customColors": {},
    "deployments": {},
    "elements": {
      "person": {
        "style": {},
      },
    },
    "relationships": {},
    "tags": {},
  },
  "views": {
    "index": {
      "_stage": "computed",
      "_type": "element",
      "autoLayout": {
        "direction": "TB",
      },
      "description": null,
      "edges": [
        {
          "color": "red",
          "head": "diamond",
          "id": "user1:user2",
          "label": null,
          "line": "dotted",
          "parent": null,
          "relations": [
            "1qlbaph",
          ],
          "source": "user1",
          "tail": "none",
          "target": "user2",
        },
      ],
      "hash": "15affa72053028a2ec824233302d4f9fc48ab25a",
      "id": "index",
      "links": null,
      "nodes": [
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "user1",
          "inEdges": [],
          "kind": "person",
          "level": 0,
          "links": null,
          "modelRef": "user1",
          "outEdges": [
            "user1:user2",
          ],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": [],
          "technology": null,
          "title": "user1",
        },
        {
          "children": [],
          "color": "primary",
          "description": null,
          "id": "user2",
          "inEdges": [
            "user1:user2",
          ],
          "kind": "person",
          "level": 0,
          "links": null,
          "modelRef": "user2",
          "outEdges": [],
          "parent": null,
          "shape": "rectangle",
          "style": {},
          "tags": [],
          "technology": null,
          "title": "user2",
        },
      ],
      "tags": null,
      "title": "Landscape view",
    },
  },
}
`;
